--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,18 @@ body,
   background-color: #1f2026;
   
 }
+
+::-webkit-scrollbar{
+  width:10px
+}
+::-webkit-scrollbar-track{
+  background: #1f1a1e18;
+}
+::-webkit-scrollbar-thumb{
+  background: #131113;
+}
+::-webkit-scrollbar-track:hover{
+  background: #7a7b82;
+}
+
+
